--- a/src/assets/scss/scaffolding.scss
+++ b/src/assets/scss/scaffolding.scss
@@ -15,6 +15,16 @@ body {
   color: variables.$color-primary-light;
 }
 
+ul,
+ol {
+  list-style: none;
+}
+
+a {
+  color: currentColor;
+  text-decoration: none;
+}
+
 .visually-hidden {
   position: absolute;
   width: 1px;
