--- a/src/components/header/styles.module.scss
+++ b/src/components/header/styles.module.scss
@@ -4,7 +4,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 32px 16px;
+  padding: 32px 0;
   gap: 16px;
   background-color: variables.$color-primary-dark;
 }
