feat: add scripts page

--- a/frontend/src/assets/scss/variables.scss
+++ b/frontend/src/assets/scss/variables.scss
@@ -5,7 +5,11 @@ $color-primary-brand: #cc5803;
 $color-primary-danger: #b70c0c;
 $color-primary-success: #127307;
 
+$color-secondary-light: #af816b;
+$color-secondary-brand: #733613;
+
 $color-transparent-dark: rgba($color-primary-dark, 0.5);
+$color-transparent-light: rgba($color-primary-light, 0.5);
 $color-transparent-danger: rgba($color-primary-danger, 0.5);
 $color-transparent-success: rgba($color-primary-success, 0.5);
 
