--- a/frontend/src/components/button/styles.module.scss
+++ b/frontend/src/components/button/styles.module.scss
@@ -6,15 +6,33 @@
   align-items: center;
   padding: 8px;
   color: variables.$color-primary-dark;
-  background-color: variables.$color-primary-light;
   border: none;
   border-radius: 8px;
   font-family: Karla;
   font-size: 24px;
   cursor: pointer;
-  transition: background-color ease 0.25s;
+  transition-duration: 0.25s;
+  transition-timing-function: ease;
+  transition-property: background-color, color;
+}
 
-  &:hover {
-    background-color: variables.$color-primary-brand;
+.variant {
+  &-solid {
+    background-color: variables.$color-primary-light;
+
+    &:hover {
+      background-color: variables.$color-primary-brand;
+    }
+  }
+
+  &-outlined {
+    border: 1px solid variables.$color-primary-light;
+    background-color: transparent;
+    color: variables.$color-primary-light;
+
+    &:hover {
+      background-color: variables.$color-primary-light;
+      color: variables.$color-primary-brand;
+    }
   }
 }
