--- a/frontend/src/components/monitor-script-avatar/styles.module.scss
+++ b/frontend/src/components/monitor-script-avatar/styles.module.scss
@@ -5,12 +5,13 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    overflow: hidden;
+    position: relative;
     width: 48px;
     aspect-ratio: 1;
-    background-color: variables.$color-primary-brand;
     box-shadow: variables.$box-shadow-aura;
     border-radius: 50%;
+    font-family: Kadwa;
+    font-size: 32px;
   }
 
   &-image {
@@ -19,12 +20,46 @@
     font-family: Kadwa;
     width: 100%;
     height: 100%;
+    border-radius: 50%;
     object-fit: cover;
   }
 
-  &-letter {
-    font-family: Kadwa;
-    font-size: 32px;
-    color: variables.$color-primary-light;
+  &-status-indicator {
+    &::after {
+      content: '';
+      display: block;
+      position: absolute;
+      z-index: 1;
+      width: 16px;
+      top: 0;
+      right: 0;
+      aspect-ratio: 1;
+      border-radius: 50%;
+      box-shadow: variables.$box-shadow-aura;
+    }
+
+    &-none::after {
+      display: none;
+    }
+
+    &-active::after {
+      background-color: variables.$color-primary-success;
+    }
+
+    &-inactive::after {
+      background-color: variables.$color-primary-danger;
+    }
+  }
+
+  &-color {
+    &-brand {
+      background-color: variables.$color-primary-brand;
+      color: variables.$color-primary-light;
+    }
+
+    &-light {
+      background-color: variables.$color-primary-light;
+      color: variables.$color-primary-brand;
+    }
   }
 }
